added pkmnmaxmsp.html & binaural objects
slight revision to height-layer.html
all links now open in a new tab instead of in the current tab.
updated audiothings.html to include binauralobjectsfeb24.html
updated journal.html to exclude categories not yet populated.

--- a/audiothings.html
+++ b/audiothings.html
@@ -43,6 +43,8 @@
 			<br>
 			<p style='text-align: center;'>
 				<a href="height-layer.html">height layer comparison (apr 2024)</a>
+				<br>
+				<a href="binauralobjectsfeb24.html">binaural objects (feb 2024)</a>
 			</p>
 		</div>
 	</div>
