--- a/cerialv2.html
+++ b/cerialv2.html
@@ -41,7 +41,7 @@
 			</div>
 			<hr>			
 			<h2 style="text-align: center;">cerial ver. 2 (dec 2023)</h2>
-			<p style='text-align: center;'><i>a lot of this was written retroactively,<br>so here's the state of things as of apr 17, 2024.</i></p>
+			<p style="text-align: center;">a better way to play street fighter.</p>
 			<br>
 			<!-- entry 1 -->
 			<div class="flex-container">
@@ -191,7 +191,7 @@
 						<br>the day it all comes together. and also the day i actually write code for once.
 						<br>
 						<br>i basically went into a fugue state for 9 hours and wrote the appropriate code, which
-						<br> may be found <a href='https://github.com/hytheaway/cerialver2'>here</a>.
+						<br> may be found <a href='https://github.com/hytheaway/cerialver2' target="_blank">here</a>.
 						<br>
 						<br>i will be the first to admit that i am not an expert in c or c++, and i am much
 						<br>less an expert in programming microcontrollers, especially with dynamic instructions.
