--- a/height-layer.html
+++ b/height-layer.html
@@ -77,7 +77,7 @@
         <br>performed by canon larry tremsky on apr 16, 2024.
         <br>
         <br>the array used is the pcma-3d array, as outlined by dr lee & dr johnson <a
-          href="https://www.aes.org/tmpFiles/elib/20240409/21536.pdf">here.</a>
+          href="https://doi.org/10.17743/jaes.2021.0038" target="_blank">here</a>.
         <br>the height array for mix a is coincident with the main array.
         <br>the height array for mix b is 2 meters above the main array.
         <br>
