--- a/journal.html
+++ b/journal.html
@@ -42,10 +42,10 @@
 			<br>
 			<div class='journalnavbar'>
 				<ul>
-					<li><a href='keyboards.html'>keyboards</a></li>
+					<!-- <li><a href='keyboards.html'>keyboards</a></li>
 					|
 					<li><a href='videogames.html'>video games</a></li>
-					|
+					| -->
 					<li><a href='consolemods.html'>console mods</a></li>
 					|
 					<li><a href='audiothings.html'>audio things</a></li>
