--- a/projects.html
+++ b/projects.html
@@ -59,10 +59,48 @@
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
 					<p style='font-size: 90%;'>microphones: 5 schoeps mk6, 4 sennheiser mkh800, 4 dpa 4011a.
-					<br>other: 2 apogee symphony io</p>
+					<br>other: 2 apogee symphony io mkii.</p>
 				</div>
 			</div>
 			<!-- entry 2 -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
+					<img src='assets/pkmnMaxMSP.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<p style='line-height: 0.25;'>pkmnMaxMSP</p>
+					<p style='line-height: 1.0;'><small><i>making noise music fun for once.</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='pkmnmaxmsp.html'>pkmnMaxMSP (mar 2024)</a></h2>
+					<p>maximum noise. minimum effort.</p>
+					<br>
+					<p style='font-size: 80%;'>what if playing pokémon gave you a headache?
+					<br>can be found on github <a href="https://github.com/hytheaway/pkmnMaxMSP" target="_blank">here</a>.
+					<br>video demo can be found <a href="https://youtu.be/AFi1Px7UF9E" target="_blank">here</a>.</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>maxmsp, mgba, obs, loopback.</p>
+				</div>
+			</div>
+			<!-- entry 3 -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
+					<img src='assets/danse-ku100glasses.jpeg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<p style='line-height: 0.25;'>binaural objects</p>
+					<p style='line-height: 1.0;'><small><i>so, yes head?</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='binauralobjectsfeb24.html'>binaural objects (feb 2024)</a></h2>
+					<p>analogue & digital binaural.</p>
+					<br>
+					<p style='font-size: 80%;'>blending binaural recordings with binaural processing.</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>neumann ku100, dearvr.</p>
+				</div>
+			</div>
+			<!-- entry 4 -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -77,13 +115,34 @@
 					<p style='font-size: 80%;'>i don't play any fighting games but i like the look and feel of fight sticks.
 						<br>so now it's a way to make music.
 						<br>it also now functions simultaneously as a fight stick <i>and</i> as a musical instrument.
-						<br>can be found on github <a href='https://github.com/hytheaway/cerialver2'>here</a>.</p>
+						<br>can be found on github <a href='https://github.com/hytheaway/cerialver2' target="_blank">here</a>.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.'>MEAP board</a><br><a href='https://a.co/d/4CRT2Pq'>plastic juntion box</a><br><a href='https://a.co/d/7k1CtzN'>generic arcade buttons and stick (sanwa clones)</a></p>
+					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.' target="_blank">MEAP board</a><br><a href='https://a.co/d/4CRT2Pq' target="_blank">plastic juntion box</a><br><a href='https://a.co/d/7k1CtzN' target="_blank">generic arcade buttons and stick (sanwa clones)</a></p>
 				</div>
 			</div>
-			<!-- entry 2 -->
+			<!-- entry 5 -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
+					<br>
+					<img src='assets/python-logo.png' style="max-width: 25%; max-height: 100vh; margin: auto;">
+					<p style="line-height: 0.25;">rmg (dec 2023)</p>
+				</div>
+				<div class='rightside'>
+					<h2>rmg (dec 2023)</h2>
+					<p>random music generator (manipulator).</p>
+					<br>
+					<p style="font-size: 80%;">unlike the version from october, this is less of a random music "generator"
+						<br>and more of a random music manipulator.
+						<br>even still, i consider it part of my rmg series.
+						<br>can be found on github <a href='https://github.com/hytheaway/dec23-rmg' target="_blank">here</a>.</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>python<br>libraries: numpy, matplotlib, soundfile, pydub, IPython, tkinter.</p>
+				</div>
+			</div>
+			<!-- entry 6 -->
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
@@ -100,35 +159,16 @@
 						<br>each button has an fsr attached to it for "truly" "analogue" control.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.'>MEAP board</a><br>takeaway tupperware container<br><a href='https://a.co/d/1bCcZAN'>generic arcade buttons (sanwa clones)</a><br><a href='https://www.adafruit.com/product/166'>adafruit force sensitive resistors</a></p>
+					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.' target="_blank">MEAP board</a><br>takeaway tupperware container<br><a href='https://a.co/d/1bCcZAN' target="_blank">generic arcade buttons (sanwa clones)</a><br><a href='https://www.adafruit.com/product/166' target="_blank">adafruit force sensitive resistors</a></p>
 				</div>
 			</div>
-			<!-- entry 3 -->
-			<br>
-			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
-				<div class='leftside'>
-					<br>
-					<img src='assets/python-logo.png' style="max-width: 25%; max-height: 100vh; margin: auto;">
-				</div>
-				<div class='rightside'>
-					<h2>rmg (dec 2023)</h2>
-					<p>random music generator (manipulator).</p>
-					<br>
-					<p style="font-size: 80%;">unlike the version from october, this is less of a random music "generator"
-						<br>and more of a random music manipulator.
-						<br>even still, i consider it part of my rmg series.
-						<br>can be found on github <a href='https://github.com/hytheaway/dec23-rmg'>here</a>.</p>
-					<br>
-					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>python<br>libraries: numpy, matplotlib, soundfile, pydub, IPython, tkinter</p>
-				</div>
-			</div>
-			<!-- entry 4 -->
+			<!-- entry 7 -->
 			<br>
 			<div class='flex-container'>
 				<div class='leftside'>
 					<br>
 					<img src="assets/python-logo.png" style="max-width: 25%; max-height: 100vh; margin: auto;">
+					<p style="line-height: 0.25;">rmg (oct 2023)</p>
 				</div>
 				<div class="rightside">
 					<h2>rmg (oct 2023)</h2>
@@ -136,10 +176,10 @@
 					<br>
 					<p style='font-size: 80%;'>every year or so i write a new random music generator in python.
 						<br>this was this year's.
-						<br>can be found on github <a href='https://github.com/hytheaway/oct23-rmg'>here</a>.</p>
+						<br>can be found on github <a href='https://github.com/hytheaway/oct23-rmg' target="_blank">here</a>.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
-					<p style='font-size: 90%;'>python<br>libraries: numpy, scipy, pydub</p>
+					<p style='font-size: 90%;'>python.<br>libraries: numpy, scipy, pydub.</p>
 				</div>
 			</div>
 		</div>
