implemented mobile viewing accomodation

--- a/binauralobjectsfeb24.html
+++ b/binauralobjectsfeb24.html
@@ -46,7 +46,7 @@
             <p style="text-align: center;">and the demands involved.</p>
             <div class="flex-container">
                 <div class="leftside">
-                    <p style="font-size: 70%; text-align: right;">
+                    <p class="danseText" style="font-size: 70%; text-align: right;">
                         well, the first demand is lugging the damn thing around.
                         <br>
                         <br>i mean, no one really tells you how cumbersome a head is until you're the one
@@ -70,10 +70,10 @@
                         <br>believe whatever story neumann makes up about his other body parts? unlikely.
                         <br>they must be hoarding his arms and legs, saving his torso and appendages for some grand feast.
                     </p>
-                    <p style="font-size: 70%; text-align: center;">
+                    <p class="danseText" style="font-size: 70%; text-align: center;">
                         <i>...ew.</i>
                     </p>
-                    <p style="font-size: 70%; text-align: right;">
+                    <p class="danseText" style="font-size: 70%; text-align: right;">
                         seizing your own attention back from... ... ...whatever depths you just came from, the weight
                         <br>is hardly insurmountable, and as long as you keep your wits about you, you should be fine.
                         <br>
