updated classes & added mobile support for cerialv2.html

--- a/cerialv2.html
+++ b/cerialv2.html
@@ -45,13 +45,11 @@
 			<br>
 			<!-- entry 1 -->
 			<div class="flex-container">
-				<div class="leftside">
-					<br>
-					<br>
+				<div class="leftside" style="display: flex; align-items: center; justify-content: center;">
 					<img src="assets/cerial ver2.jpg" style="max-width: 35%; max-height: 100vh; margin: auto;">
 				</div>
-				<div class="rightside">
-					<p style="font-size: 80%;"><i>dec 12, 2023.</i>
+				<div class="rightside cerialEntry" style="display: flex; align-items: center; justify-content: left;">
+					<p class="mobileCenterText" style="font-size: 80%;"><i><b>dec 12, 2023.</b></i>
 						<br>by the time this photo was taken, this was only a fight stick.
 						<br>there were no components that had anything to do with music.
 						<br>still, i was super thrilled i got anything to work.
@@ -78,12 +76,10 @@
 					</p>
 				</div>
 			</div>
-			<br>
-			<br>
 			<!-- entry 2 -->
 			<div class="flex-container">
-				<div class="leftside">
-					<p style="font-size: 80%; text-align: right;"><i>dec 16, 2023.</i>
+				<div class="leftside cerialEntry" style="display: flex; align-items: center; justify-content: right;">
+					<p class="mobileCenterText" style="font-size: 80%; text-align: right;"><i><b>dec 16, 2023.</b></i>
 						<br>the a-ha moment for me came while i was on break during a bartending class.
 						<br>zooming in on this picture of my notebook will probably make most
 						<br>properly trained circuit-designers cringe, but i was frantic to record my ramblings
@@ -101,39 +97,18 @@
 						<br>i think.
 					</p>
 				</div>
-				<div class="rightsidecenter">
+				<div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
 					<img src="assets/cerial2_insane-ramblings.jpg" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 			</div>
 			<br>
-			<br>
 			<!-- entry 3 -->
 			<div class="flex-container">
-				<div class="leftside">
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
+				<div class="leftside" style="display: flex; align-items: center; justify-content: center;">
 					<img src="assets/cerial2_testing-cables.jpg" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
-				<div class="rightside">
-					<p style="font-size: 80%;"><i>dec 18, 2023.</i>
+				<div class="rightside cerialEntry" style="display: flex; align-items: center; justify-content: left;">
+					<p class="mobileCenterText" style="font-size: 80%;"><i><b>dec 18, 2023.</b></i>
 						<br>how long has it been?
 						<br>
 						<br>.days?
@@ -180,14 +155,10 @@
 					</p>
 				</div>
 			</div>
-			<br>
-			<br>
 			<!-- entry 4 -->
 			<div class="flex-container">
-				<div class="leftside">
-					<br>
-					<br>
-					<p style="font-size: 80%; text-align: right;"><i>dec 19, 2023.</i>
+				<div class="leftside cerialEntry" style="display: flex; align-items: center; justify-content: right;">
+					<p class="mobileCenterText" style="font-size: 80%; text-align: right;"><i><b>dec 19, 2023.</b></i>
 						<br>the day it all comes together. and also the day i actually write code for once.
 						<br>
 						<br>i basically went into a fugue state for 9 hours and wrote the appropriate code, which
@@ -198,7 +169,7 @@
 						<br>however, it functions, and as long as i don't touch it, it will continue to function.
 					</p>
 				</div>
-				<div class="rightsidecenter">
+				<div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
 					<img src="assets/cerial2_first-time-operational.jpg" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 			</div>
