added fourierifier.html & repaired directory links

--- a/binauralobjectsfeb24.html
+++ b/binauralobjectsfeb24.html
@@ -17,9 +17,9 @@
                 [ path:
                 <a href="/">home</a>
                 /
-                <a href='journal.html'>projects</a>
+                <a href='projects.html'>projects</a>
                 /
-                <a href="cerialv2.html">binaural objects</a>
+                <a href="binauralobjectsfeb24.html">binaural objects</a>
                 ]
             </div>
         </div>
