--- a/pkmnmaxmsp.html
+++ b/pkmnmaxmsp.html
@@ -17,9 +17,9 @@
                 [ path:
                 <a href="/">home</a>
                 /
-                <a href='journal.html'>projects</a>
+                <a href='projects.html'>projects</a>
                 /
-                <a href="cerialv2.html">pkmnMaxMSP</a>
+                <a href="pkmnmaxmsp.html">pkmnMaxMSP</a>
                 ]
             </div>
         </div>
