added projects entry for fourierifier.html

--- a/fourierifier.html
+++ b/fourierifier.html
@@ -42,7 +42,7 @@
             <hr>
             <!-- begin writing here -->
             <h2 style="text-align: center;">fourierifier (apr 2024)</h2>
-            <p style="text-align: center;">how i fixed music.
+            <p style="text-align: center;">how i fixed music. permanently.
                 <br><a href="https://github.com/hytheaway/fourierifier" target="_blank">github</a> | <a href="https://youtu.be/f8CTX8Tqclg" target="_blank">youtube demo</a>
             </p>
             <div id="fourierifierFlexContainer" class="flex-container">
