--- a/projects.html
+++ b/projects.html
@@ -66,6 +66,26 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
+					<img src='assets/fourierifier.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<p style='line-height: 0.25;'>fourierifier</p>
+					<p style='line-height: 1.0;'><small><i>like a guitar pedal for making all your music good.</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='fourierifier.html'>fourierifier (apr 2024)</a></h2>
+					<p>how i fixed music. permanently.</p>
+					<br>
+					<p style='font-size: 80%;'>a way to make songs less boring.
+					<br>can be found on github <a href="https://github.com/hytheaway/fourierifier" target="_blank">here</a>.
+					<br>video demo can be found <a href="https://youtu.be/f8CTX8Tqclg" target="_blank">here</a>.</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>maxmsp.</p>
+				</div>
+			</div>
+			<!-- entry 2 -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
 					<img src='assets/pkmnMaxMSP.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>pkmnMaxMSP</p>
 					<p style='line-height: 1.0;'><small><i>making noise music fun for once.</i></small></p>
