--- a/cerialv2.html
+++ b/cerialv2.html
@@ -4,7 +4,7 @@
 	<title>cerial ver. 2</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
+	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
 </head>
@@ -46,7 +46,7 @@
 			<!-- entry 1 -->
 			<div class="flex-container">
 				<div class="leftside" style="display: flex; align-items: center; justify-content: center;">
-					<img src="assets/cerial ver2.jpg" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src="assets/cerial ver2.jpg" id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
 				</div>
 				<div class="rightside cerialEntry" style="display: flex; align-items: center; justify-content: left;">
 					<p class="mobileCenterText" style="font-size: 80%;"><i><b>dec 12, 2023.</b></i>
@@ -98,14 +98,14 @@
 					</p>
 				</div>
 				<div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
-					<img src="assets/cerial2_insane-ramblings.jpg" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="assets/cerial2_insane-ramblings.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 			</div>
 			<br>
 			<!-- entry 3 -->
 			<div class="flex-container">
 				<div class="leftside" style="display: flex; align-items: center; justify-content: center;">
-					<img src="assets/cerial2_testing-cables.jpg" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="assets/cerial2_testing-cables.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 				<div class="rightside cerialEntry" style="display: flex; align-items: center; justify-content: left;">
 					<p class="mobileCenterText" style="font-size: 80%;"><i><b>dec 18, 2023.</b></i>
@@ -170,7 +170,7 @@
 					</p>
 				</div>
 				<div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
-					<img src="assets/cerial2_first-time-operational.jpg" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="assets/cerial2_first-time-operational.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 			</div>
 		</div>
