--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>hytheaway</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
+	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
 </head>
@@ -41,7 +41,7 @@
 			<div class='flex-container'>
 
 				<div class='leftside'>
-					<img src='assets/me1.jpg' style='border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px; max-width: 35%; max-height: 100vh; margin: auto;'>
+					<img src='assets/me1.jpg' id="borderimg1" style='max-width: 35%; max-height: 100vh; margin: auto;'>
 					<p style='line-height: 0.25;'>this is a photo of me.</p>
 				</div>
 
