--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 	<title>projects</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
+	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
 </head>
@@ -43,7 +43,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/height_layer_comparison.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src='assets/height_layer_comparison.jpg' id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>height layer comparison</p>
 					<p style='line-height: 1.0;'><small><i>what kind of monster takes the screws out of a d sub?</i></small></p>
 				</div>
@@ -66,7 +66,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/fourierifier.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src='assets/fourierifier.jpg' id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>fourierifier</p>
 					<p style='line-height: 1.0;'><small><i>like a guitar pedal for making all your music good.</i></small></p>
 				</div>
@@ -86,7 +86,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/pkmnMaxMSP.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src='assets/pkmnMaxMSP.jpg' id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>pkmnMaxMSP</p>
 					<p style='line-height: 1.0;'><small><i>making noise music fun for once.</i></small></p>
 				</div>
@@ -106,7 +106,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/danse-ku100glasses.jpeg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src='assets/danse-ku100glasses.jpeg' id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>binaural objects</p>
 					<p style='line-height: 1.0;'><small><i>so, yes head?</i></small></p>
 				</div>
@@ -124,7 +124,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/cerial ver2.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src='assets/cerial ver2.jpg' id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>cerial ver. 2</p>
 					<p style='line-height: 1.0;'><small><i>do not mind the scattered energy drinks.</i></small></p>
 				</div>
@@ -166,7 +166,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/cerial ver1.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src='assets/cerial ver1.jpg' id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>cerial ver. 1</p>
 					<p style='line-height: 1.0;'><small><i>the tupperware was cleaned before use.</i></small></p>
 				</div>
