--- a/videogames.html
+++ b/videogames.html
@@ -4,7 +4,7 @@
 	<title>video games</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
+	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
 </head>
