--- a/binauralobjectsfeb24.html
+++ b/binauralobjectsfeb24.html
@@ -5,7 +5,7 @@
     <title>binaural objects</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
+    <link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
     <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
     <link rel='stylesheet' href='styles.css'>
 </head>
@@ -81,7 +81,7 @@
                     </p>
                 </div>
                 <div class="rightsidecenter">
-                    <img src="assets/danse-ku100subway.jpg" style="max-width: 45%; max-height: 100vh;">
+                    <img src="assets/danse-ku100subway.jpg" id="borderimg1" style="max-width: 40%; max-height: 100vh;">
                 </div>
             </div>
         </div>
