--- a/consolemods.html
+++ b/consolemods.html
@@ -4,7 +4,7 @@
 	<title>console mods</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
+	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
 </head>
@@ -46,7 +46,7 @@
 			<!-- entry 1 -->
 			<div class="flex-container">
 				<div class="leftside">
-					<img src="assets/both_gameboys.jpg" style="max-width: 25%; max-height: 100vh; margin: auto;">
+					<img src="assets/both_gameboys.jpg" id="borderimg1" style="max-width: 25%; max-height: 100vh; margin: auto;">
 					<br>can you spot the difference between these two?
 					<p style="font-size: 70%;">
 						i mean like obviously yes you can they look incredibly different but that's besides the point.
@@ -55,7 +55,7 @@
 					<br>i'll tell ya, not much.
 					<br>
 					<br>
-					<img src="assets/modded_gameboy.jpg" style="max-width: 20%; max-height: 100vh; margin: auto;">
+					<img src="assets/modded_gameboy.jpg" id="borderimg1" style="max-width: 20%; max-height: 100vh; margin: auto;">
 					<br>but it's cool enough.
 				</div>
 			</div>
