--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
 	<title>contact?</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
+	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
 </head>
 
-<body style='background-color: black; color: white;'>
+<body style='background-color: black; color: white; background-image: none;'>
 	<div class='content'>
 
 		<div class='header'>
