--- a/height-layer.html
+++ b/height-layer.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" charset="utf-8" content="text/html; initial-scale=1.0; width='device-width"
     width="device-width" name="viewport">
-  <link rel='icon' type="image/x-icon" href="assets/Pikachu.png">
+  <link rel='icon' type="image/x-icon" href="assets/the-best-fav.gif">
   <link href="https://fonts.googleapis.com/css?family=DotGothic16" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>height layer comparison</title>
